Revision history for Capture-Tiny

{{$NEXT}}

0.23      2013-10-20 11:25:34 America/New_York

  Fixed:

  - minimum Perl prereq is back to 5.6 (but $diety help you if
    you're still stuck on 5.6)

  Documented:

  - Added warning about using @_ in a capture block

0.22      2013-03-27 15:50:29 America/New_York

  Documented:

  - Issue tracker is now github

0.21      2012-11-14 19:04:49 America/New_York

  Changed:

  - Skips tee and leak tests for closed STDIN on Perl prior to
    5.12 when PERL_UNICODE=D.  Documented lack of support as
    a known issue.

  - Isolated tee subprocesses from effects of PERL_UNICODE as a
    precaution (though this did not fix the above issue).

  - Improved layer detection for handles proxied due to being closed
    or tied.

0.20      2012-09-19 13:20:57 America/New_York

  Fixed:

  - Nested merged captures that include an external program call no longer
    leak STDERR to the outer scope [rt.cpan.org #79376]

0.19      2012-08-06 20:26:34 America/New_York

  Fixed:

  - Work around rt.perl.org #114404 by forcing PerlIO layers back on
    original handles [rt.cpan.org #78819]

0.18      2012-05-04 16:31:53 America/New_York

  Added:

  - When capture or tee are called in void context, Capture::Tiny
    skips reading back from the capture handles if it can do so safely

0.17_52   2012-03-09 11:45:19 EST5EDT

  Fixed:

  - Tied STDIN is always localized before redirections to avoid tees
    hanging on MSWin32
    
  - Copying and reopening STDIN is necessary to avoid tees hanging on MSWin32.

0.17_51   2012-03-07 18:22:34 EST5EDT

  Fixed:

  - Avoids reopening STDIN while setting up a capture, which avoids
    some problems with pathological tied filehandle implementations
    such as in FCGI

  Tested:

  - Re-enabled tied STDIN testing for MSWin32 to see if changes above
    avoid crashes seen historically

0.17      2012-02-22 08:07:41 EST5EDT

  Fixed:

  - Added a workaround for failing t/08-stdin-closed.t under blead